# audio-notes-automation

./: .gitignore  README.md  app.py  pyproject.toml
skills/audio-notes-automation/: SKILL.md
skills/audio-notes-automation/agents/: openai.yaml
skills/audio-notes-automation/references/: setup.md
skills/audio-notes-automation/scripts/: run_audio_notes.py
src/audio_notes_automation/: __init__.py  cli.py  diarization.py  launch_webapp.py  models.py  notes.py  pipeline.py  transcription.py  utils.py  webapp.py
src/audio_notes_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
